Update UI: perbaikan ikon sapu, teks baru, dan penyesuaian tata letak

--- a/index.html
+++ b/index.html
@@ -16,34 +16,42 @@
 </head>
 <body class="min-h-screen flex flex-col">
     <div class="flex-grow p-4">
-        <header class="flex justify-between items-center mb-6">
-            <div class="flex items-center space-x-2">
-                <div class="bg-white p-2 rounded-full shadow-md">
-                    <i class="ph ph-user text-gray-700 text-2xl"></i>
-                </div>
-                <span class="font-semibold text-lg text-gray-800">NAMA KAMU</span>
-            </div>
+        <header class="flex justify-end items-center mb-6">
             <button class="text-gray-700 focus:outline-none">
                 <i class="ph ph-list text-3xl"></i>
             </button>
         </header>
 
-        <div class="text-center mb-6">
-            <h1 class="text-xl font-bold text-gray-800">E-SIX</h1>
-            <p class="text-sm text-gray-600">ELEVEN-SIX CLASS</p>
+        <div class="text-center mb-4">
+            <p class="text-xl font-bold text-gray-800">E-SIXVASCO</p>
+            <p class="text-md text-gray-600">X-6 SMAN 3 KARAWANG</p>
         </div>
 
-        <div class="relative mb-6">
-            <input type="text" placeholder="Search here ..." class="w-full p-3 pl-10 pr-4 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 transition duration-200">
-            <i class="ph ph-magnifying-glass absolute left-3 top-1/2 transform -translate-y-1/2 text-gray-400"></i>
+        <div class="bg-gradient-to-r from-purple-500 to-indigo-600 p-4 rounded-t-2xl rounded-b-none shadow-lg flex items-center space-x-4 text-white">
+            <div class="w-16 h-16 rounded-full bg-white overflow-hidden flex-shrink-0">
+                <img src="https://via.placeholder.com/64" alt="Profil Pengguna" class="w-full h-full object-cover">
+            </div>
+            <div>
+                <h2 class="text-xl font-bold">FAIRUUZ SYAUQI HAN</h2>
+                <p class="text-sm font-light">XI-6</p>
+            </div>
         </div>
 
-        <h2 class="text-lg font-semibold text-gray-800 mb-3">SALDO KAS KAMU</h2>
+        <div class="bg-white p-4 rounded-t-none rounded-b-2xl shadow-lg mb-6 flex items-center justify-between text-gray-800">
+            <div>
+                <p class="text-lg font-semibold">Senin, 2 Juni 2025</p>
+            </div>
+            <div class="w-16 h-16 flex-shrink-0">
+                <img src="https://via.placeholder.com/64?text=Jam" alt="Icon Jam" class="w-full h-full object-contain">
+            </div>
+        </div>
+
+        <h2 class="text-lg font-semibold text-gray-800 mb-3">SALDO KAS</h2>
         <div class="bg-gradient-to-r from-blue-600 to-blue-800 text-white p-6 rounded-2xl shadow-lg mb-6 flex flex-col justify-between h-40">
             <div class="flex justify-between items-start">
                 <div>
-                    <span class="text-sm font-light">TOTAL</span>
-                    <p class="text-4xl font-bold mt-1">Rp. 0</p>
+                    <span class="text-sm font-light">JUMLAH KAS</span>
+                    <p class="text-4xl font-bold mt-1">Rp. 500.000</p>
                 </div>
                 <button class="bg-blue-700 bg-opacity-50 p-2 rounded-full hover:bg-opacity-70 transition duration-200">
                     <i class="ph ph-dots-three text-white text-xl"></i>
@@ -51,11 +59,11 @@
             </div>
             <div class="text-right text-sm font-light">
                 TOTAL SALDO KAS KELAS
-                <p class="text-lg font-semibold">Rp. 0</p>
+                <p class="text-lg font-semibold">Rp. 500.000</p>
             </div>
         </div>
 
-        <h2 class="text-lg font-semibold text-gray-800 mb-4">MENU LAINNYA</h2>
+        <h2 class="text-lg font-semibold text-gray-800 mb-4">MENU</h2>
         <div class="grid grid-cols-3 gap-4">
             <div class="bg-white p-4 rounded-xl shadow-md flex flex-col items-center justify-center text-center">
                 <div class="bg-blue-100 p-3 rounded-full mb-2">
@@ -71,8 +79,7 @@
             </div>
             <div class="bg-white p-4 rounded-xl shadow-md flex flex-col items-center justify-center text-center">
                 <div class="bg-green-100 p-3 rounded-full mb-2">
-                    <i class="ph ph-broom text-green-600 text-3xl"></i>
-                </div>
+                    <i class="ph ph-broom text-green-600 text-3xl"></i> </div>
                 <span class="text-sm font-medium text-gray-700">JADWAL PIKET KELAS</span>
             </div>
         </div>
