Update UI: Penyesuaian header dan teks

--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
 </head>
 <body class="min-h-screen flex flex-col">
     <div class="flex-grow p-4">
-        <header class="flex justify-end items-center mb-6">
+        <header class="flex justify-between items-center mb-6">
+            <div class="text-center flex-grow">
+                <p class="text-xl font-bold text-gray-800">E-SIXVASCO</p>
+                <p class="text-md text-gray-600">XI-6 SMAN 3 KARAWANG</p>
+            </div>
             <button class="text-gray-700 focus:outline-none">
                 <i class="ph ph-list text-3xl"></i>
             </button>
         </header>
-
-        <div class="text-center mb-4">
-            <p class="text-xl font-bold text-gray-800">E-SIXVASCO</p>
-            <p class="text-md text-gray-600">X-6 SMAN 3 KARAWANG</p>
-        </div>
 
         <div class="bg-gradient-to-r from-purple-500 to-indigo-600 p-4 rounded-t-2xl rounded-b-none shadow-lg flex items-center space-x-4 text-white">
             <div class="w-16 h-16 rounded-full bg-white overflow-hidden flex-shrink-0">
@@ -79,7 +78,8 @@
             </div>
             <div class="bg-white p-4 rounded-xl shadow-md flex flex-col items-center justify-center text-center">
                 <div class="bg-green-100 p-3 rounded-full mb-2">
-                    <i class="ph ph-broom text-green-600 text-3xl"></i> </div>
+                    <i class="ph ph-broom text-green-600 text-3xl"></i>
+                </div>
                 <span class="text-sm font-medium text-gray-700">JADWAL PIKET KELAS</span>
             </div>
         </div>
