--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="min-h-screen flex flex-col">
     <div class="flex-grow p-4">
         <header class="flex justify-between items-center mb-6">
-            <div class="text-center flex-grow">
+            <div>
                 <p class="text-xl font-bold text-gray-800">E-SIXVASCO</p>
                 <p class="text-md text-gray-600">XI-6 SMAN 3 KARAWANG</p>
             </div>
@@ -32,7 +32,7 @@
             </div>
             <div>
                 <h2 class="text-xl font-bold">FAIRUUZ SYAUQI HAN</h2>
-                <p class="text-sm font-light">XI-6</p>
+                <p class="text-sm font-light">14</p>
             </div>
         </div>
 
