--- a/index.html
+++ b/index.html
@@ -27,14 +27,9 @@
         </header>
 
         <div class="bg-gradient-to-r from-purple-500 to-indigo-600 p-4 rounded-t-2xl rounded-b-none shadow-lg flex items-center space-x-4 text-white">
-            <div id="profilePicContainer" class="w-16 h-16 rounded-full bg-white overflow-hidden flex-shrink-0 cursor-pointer relative group">
+            <div class="w-16 h-16 rounded-full bg-white overflow-hidden flex-shrink-0">
                 <img id="profilePic" src="https://via.placeholder.com/64" alt="Profil Pengguna" class="w-full h-full object-cover">
-                <div class="absolute inset-0 bg-black bg-opacity-30 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity duration-200">
-                    <i class="ph ph-camera text-white text-2xl"></i>
-                </div>
             </div>
-            <input type="file" id="fileInput" accept="image/*" class="hidden">
-
             <div>
                 <h2 class="text-xl font-bold">FAIRUUZ SYAUQI HAN</h2>
                 <p class="text-sm font-light">14</p>
@@ -90,108 +85,5 @@
         </div>
     </div>
 
-    <script type="module">
-        // Import modul Firebase
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, signInAnonymously, signInWithCustomToken, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-        import { getFirestore, doc, setDoc, onSnapshot } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
-
-        // Variabel global dari lingkungan Canvas
-        const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
-        const firebaseConfig = JSON.parse(typeof __firebase_config !== 'undefined' ? __firebase_config : '{}');
-        const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
-
-        // Inisialisasi Firebase
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-        const auth = getAuth(app);
-
-        let userId = null; // Akan diisi setelah autentikasi
-
-        // Mendapatkan elemen-elemen DOM
-        const profilePicContainer = document.getElementById('profilePicContainer');
-        const profilePic = document.getElementById('profilePic');
-        const fileInput = document.getElementById('fileInput');
-
-        // Autentikasi Firebase
-        onAuthStateChanged(auth, async (user) => {
-            if (user) {
-                userId = user.uid;
-                console.log("Authenticated with userId:", userId);
-                // Muat data profil setelah autentikasi
-                loadUserProfile(userId);
-            } else {
-                // Jika tidak ada token awal, coba login anonim
-                if (initialAuthToken) {
-                    try {
-                        await signInWithCustomToken(auth, initialAuthToken);
-                    } catch (error) {
-                        console.error("Error signing in with custom token:", error);
-                        // Fallback ke anonim jika token gagal
-                        await signInAnonymously(auth);
-                    }
-                } else {
-                    await signInAnonymously(auth);
-                }
-            }
-        });
-
-        // Fungsi untuk memuat data profil dari Firestore
-        const loadUserProfile = (currentUserId) => {
-            const userProfileDocRef = doc(db, `artifacts/${appId}/users/${currentUserId}/profile`, 'data');
-            onSnapshot(userProfileDocRef, (docSnap) => {
-                if (docSnap.exists()) {
-                    const data = docSnap.data();
-                    if (data.profileImageBase64) {
-                        profilePic.src = data.profileImageBase64;
-                    } else {
-                        profilePic.src = "https://via.placeholder.com/64"; // Default jika tidak ada gambar
-                    }
-                } else {
-                    console.log("No profile data found for user:", currentUserId);
-                    profilePic.src = "https://via.placeholder.com/64"; // Default jika dokumen tidak ada
-                }
-            }, (error) => {
-                console.error("Error fetching profile data:", error);
-                profilePic.src = "https://via.placeholder.com/64"; // Default jika ada error
-            });
-        };
-
-        // Fungsi untuk menyimpan data gambar profil ke Firestore
-        const saveProfileImage = async (base64String) => {
-            if (!userId) {
-                console.error("User not authenticated. Cannot save profile image.");
-                return;
-            }
-            const userProfileDocRef = doc(db, `artifacts/${appId}/users/${userId}/profile`, 'data');
-            try {
-                await setDoc(userProfileDocRef, { profileImageBase64: base64String }, { merge: true });
-                console.log("Profile image saved to Firestore!");
-            } catch (error) {
-                console.error("Error saving profile image to Firestore:", error);
-                // Tampilkan pesan error ke pengguna jika perlu
-                // alert("Gagal menyimpan gambar profil: " + error.message); // Hindari alert()
-            }
-        };
-
-        // Event listener untuk klik pada container foto profil
-        profilePicContainer.addEventListener('click', () => {
-            fileInput.click();
-        });
-
-        // Event listener untuk perubahan pada input file
-        fileInput.addEventListener('change', (event) => {
-            if (event.target.files && event.target.files[0]) {
-                const reader = new FileReader();
-
-                reader.onload = (e) => {
-                    profilePic.src = e.target.result; // Tampilkan langsung di UI
-                    saveProfileImage(e.target.result); // Simpan ke Firestore
-                };
-
-                reader.readAsDataURL(event.target.files[0]);
-            }
-        });
-    </script>
-</body>
+    </body>
 </html>
