--- a/index.html
+++ b/index.html
@@ -26,138 +26,114 @@
             </button>
         </header>
 
-        <div class="bg-gradient-to-r from-purple-500 to-indigo-600 p-4 rounded-t-2xl rounded-b-none shadow-lg flex items-center space-x-4 text-white">
-            <div class="w-16 h-16 rounded-full bg-white overflow-hidden flex-shrink-0">
-                <img id="profilePic" src="https://via.placeholder.com/64" alt="Profil Pengguna" class="w-full h-full object-cover">
-            </div>
+        <div class="bg-white rounded-2xl shadow-md p-6 mb-6 flex items-center space-x-4">
+            <img id="profilePic" src="https://via.placeholder.com/64" alt="Profil Pengguna"
+                 class="w-16 h-16 rounded-full border-2 border-blue-500 object-cover">
             <div>
-                <h2 id="userName" class="text-xl font-bold">Memuat Nama...</h2>
-                <p id="userNumber" class="text-sm font-light">Memuat Nomor...</p>
+                <p id="userName" class="text-xl font-semibold text-gray-800">Memuat Nama...</p>
+                <p id="userNumber" class="text-gray-600">Memuat Nomor...</p>
             </div>
         </div>
 
-        <div class="bg-white p-4 rounded-t-none rounded-b-2xl shadow-lg mb-6 flex items-center justify-between text-gray-800">
-            <div>
-                <p id="currentDate" class="text-lg font-semibold">Memuat Tanggal...</p>
-            </div>
-            <div class="w-16 h-16 flex-shrink-0">
-                <img src="https://via.placeholder.com/64?text=Jam" alt="Icon Jam" class="w-full h-full object-contain">
-            </div>
+        <div class="bg-white rounded-2xl shadow-md p-6 mb-6">
+            <h2 class="text-lg font-semibold text-gray-800 mb-3">Tanggal Hari Ini</h2>
+            <p id="currentDate" class="text-xl font-bold text-blue-600">Memuat Tanggal...</p>
         </div>
 
-        <h2 class="text-lg font-semibold text-gray-800 mb-3">SALDO KAS</h2>
-        <div class="bg-gradient-to-r from-blue-600 to-blue-800 text-white p-6 rounded-2xl shadow-lg mb-6 flex flex-col justify-between h-40">
-            <div class="flex justify-between items-start">
-                <div>
-                    <span class="text-sm font-light">JUMLAH KAS</span>
-                    <p class="text-4xl font-bold mt-1">Rp. 500.000</p>
-                </div>
-                <button class="bg-blue-700 bg-opacity-50 p-2 rounded-full hover:bg-opacity-70 transition duration-200">
-                    <i class="ph ph-dots-three text-white text-xl"></i>
-                </button>
-            </div>
-            <div class="text-right text-sm font-light">
-                TOTAL SALDO KAS KELAS
-                <p class="text-lg font-semibold">Rp. 500.000</p>
-            </div>
-        </div>
-
-        <h2 class="text-lg font-semibold text-gray-800 mb-4">MENU</h2>
-        <div class="grid grid-cols-3 gap-4">
-            <div class="bg-white p-4 rounded-xl shadow-md flex flex-col items-center justify-center text-center">
-                <div class="bg-blue-100 p-3 rounded-full mb-2">
-                    <i class="ph ph-clipboard-text text-blue-600 text-3xl"></i>
-                </div>
-                <span class="text-sm font-medium text-gray-700">TUGAS SEKOLAH</span>
-            </div>
-            <div class="bg-white p-4 rounded-xl shadow-md flex flex-col items-center justify-center text-center">
-                <div class="bg-red-100 p-3 rounded-full mb-2">
-                    <i class="ph ph-calendar-blank text-red-600 text-3xl"></i>
-                </div>
-                <span class="text-sm font-medium text-gray-700">JADWAL PELAJARAN</span>
-            </div>
-            <div class="bg-white p-4 rounded-xl shadow-md flex flex-col items-center justify-center text-center">
-                <div class="bg-green-100 p-3 rounded-full mb-2">
-                    <i class="ph ph-broom text-green-600 text-3xl"></i>
-                </div>
-                <span class="text-sm font-medium text-gray-700">JADWAL PIKET KELAS</span>
-            </div>
+        <div class="mt-8 text-center">
+            <button id="logoutButton"
+                    class="bg-red-500 text-white py-2 px-6 rounded-lg font-semibold hover:bg-red-600 focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-opacity-50 transition duration-200">
+                Logout
+            </button>
         </div>
     </div>
 
     <script type="module">
-        // Import modul Firebase
         import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, signInAnonymously, signInWithCustomToken, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
+        import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
         import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
 
-        // Variabel global dari lingkungan Canvas
-        const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
+        // Konfigurasi Firebase
         const firebaseConfig = JSON.parse(typeof __firebase_config !== 'undefined' ? __firebase_config : '{}');
-        const initialAuthToken = typeof __initial_auth_token !== 'undefined' ? __initial_auth_token : null;
+        const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id';
 
         // Inisialisasi Firebase
         const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
         const auth = getAuth(app);
+        const db = getFirestore(app);
 
-        let currentUserId = null; // ID autentikasi Firebase
-        let userLoginCode = null; // Kode yang dimasukkan pengguna untuk login
-
-        // Mendapatkan elemen-elemen DOM
-        const profilePic = document.getElementById('profilePic');
         const userName = document.getElementById('userName');
         const userNumber = document.getElementById('userNumber');
-        const currentDateElement = document.getElementById('currentDate');
+        const profilePic = document.getElementById('profilePic');
+        const currentDateElem = document.getElementById('currentDate');
+        const logoutButton = document.getElementById('logoutButton');
+
+        let userLoginCode = null;
+        let authReady = false;
+
+        // Autentikasi anonim saat halaman dimuat
+        onAuthStateChanged(auth, (user) => {
+            if (user) {
+                console.log("Firebase authenticated anonymously with UID:", user.uid);
+                authReady = true;
+                // Cek kode login di localStorage dan muat profil
+                userLoginCode = localStorage.getItem('userLoginCode');
+                if (userLoginCode) {
+                    loadUserProfile(userLoginCode);
+                } else {
+                    // Jika tidak ada kode login, redirect ke halaman login
+                    console.log("No userLoginCode found in localStorage, redirecting to login.html");
+                    window.location.href = 'login.html';
+                }
+            } else {
+                console.log("Firebase not authenticated. Attempting anonymous sign-in.");
+                signInAnonymously(auth)
+                    .then(() => {
+                        console.log("Anonymous sign-in successful.");
+                        authReady = true;
+                        // Setelah sign-in anonim berhasil, coba muat profil lagi
+                        userLoginCode = localStorage.getItem('userLoginCode');
+                        if (userLoginCode) {
+                            loadUserProfile(userLoginCode);
+                        } else {
+                             // Jika tetap tidak ada kode login, redirect ke halaman login
+                            console.log("No userLoginCode after anonymous sign-in, redirecting to login.html");
+                            window.location.href = 'login.html';
+                        }
+                    })
+                    .catch((error) => {
+                        console.error("Anonymous sign-in failed:", error);
+                        // Jika sign-in anonim gagal, mungkin tidak bisa memuat data Firestore
+                        userName.textContent = 'Error Autentikasi';
+                        userNumber.textContent = 'Gagal terhubung.';
+                        profilePic.src = "https://via.placeholder.com/64";
+                        console.log("Redirecting to login.html due to auth error.");
+                        window.location.href = 'login.html'; // Redirect jika autentikasi gagal
+                    });
+            }
+        });
+
 
         // Fungsi untuk menampilkan tanggal saat ini
         const displayCurrentDate = () => {
             const today = new Date();
             const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
-            currentDateElement.textContent = today.toLocaleDateString('id-ID', options);
+            currentDateElem.textContent = today.toLocaleDateString('id-ID', options);
         };
-
-        // Autentikasi Firebase dan pemuatan data
-        onAuthStateChanged(auth, async (user) => {
-            if (user) {
-                currentUserId = user.uid;
-                console.log("Authenticated with userId:", currentUserId);
-
-                // Ambil kode login dari localStorage
-                userLoginCode = localStorage.getItem('userLoginCode');
-
-                if (userLoginCode) {
-                    // Muat data profil berdasarkan kode login
-                    loadUserProfile(userLoginCode);
-                } else {
-                    // Jika tidak ada kode login, redirect ke halaman login
-                    window.location.href = 'login.html';
-                }
-            } else {
-                // Jika tidak ada token awal, coba login anonim
-                if (initialAuthToken) {
-                    try {
-                        await signInWithCustomToken(auth, initialAuthToken);
-                    } catch (error) {
-                        console.error("Error signing in with custom token:", error);
-                        // Fallback ke anonim jika token gagal
-                        await signInAnonymously(auth);
-                    }
-                } else {
-                    await signInAnonymously(auth);
-                }
-            }
-        });
 
         // Fungsi untuk memuat data profil dari Firestore
         const loadUserProfile = async (code) => {
-            // Path dokumen Firestore untuk data pengguna
-            // Data ini harus disimpan di koleksi 'public' agar bisa diakses oleh semua pengguna
-            const userDocRef = doc(db, `artifacts/${appId}/public/users_data`, code);
+            if (!authReady) {
+                console.warn("Auth not ready yet, cannot load profile.");
+                // Jika auth belum siap, mungkin perlu menunggu atau mencoba lagi
+                userName.textContent = 'Memuat Nama...';
+                userNumber.textContent = 'Memuat Nomor...';
+                return;
+            }
 
+            const userDocRef = doc(db, `artifacts/${appId}/public/users_data`, code);
             try {
                 const docSnap = await getDoc(userDocRef);
-
                 if (docSnap.exists()) {
                     const data = docSnap.data();
                     userName.textContent = data.name || 'Nama Tidak Ditemukan';
@@ -173,18 +149,35 @@
                     userNumber.textContent = '';
                     profilePic.src = "https://via.placeholder.com/64"; // Default jika dokumen tidak ada
                     // Opsional: Redirect kembali ke login jika kode tidak ditemukan
-                    // window.location.href = 'login.html';
+                    console.log("No user data, redirecting to login.html");
+                    localStorage.removeItem('userLoginCode'); // Hapus kode yang mungkin invalid
+                    window.location.href = 'login.html';
                 }
             } catch (error) {
                 console.error("Error fetching user data:", error);
                 userName.textContent = 'Error Memuat Nama';
                 userNumber.textContent = 'Error Memuat Nomor';
                 profilePic.src = "https://via.placeholder.com/64"; // Default jika ada error
+                console.log("Redirecting to login.html due to data fetch error.");
+                localStorage.removeItem('userLoginCode'); // Hapus kode yang mungkin invalid
+                window.location.href = 'login.html'; // Redirect jika ada error saat memuat data
             }
         };
 
         // Panggil fungsi untuk menampilkan tanggal saat halaman dimuat
         displayCurrentDate();
+
+        // Event listener untuk tombol logout
+        logoutButton.addEventListener('click', () => {
+            localStorage.removeItem('userLoginCode'); // Hapus kode dari localStorage
+            // Opsional: signOut(auth) jika ingin membersihkan sesi Firebase Auth
+            // signOut(auth).then(() => {
+            //     console.log("User signed out from Firebase Auth.");
+            // }).catch((error) => {
+            //     console.error("Error signing out:", error);
+            // });
+            window.location.href = 'login.html'; // Redirect ke halaman login
+        });
     </script>
 </body>
 </html>
