--- a/login.html
+++ b/login.html
@@ -34,28 +34,27 @@
     </div>
 
     <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-app.js";
-        import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-auth.js";
-        import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/11.6.1/firebase-firestore.js";
+        // Import the functions you need from the SDKs you need
+import { initializeApp } from "firebase/app";
+import { getAnalytics } from "firebase/analytics";
+// TODO: Add SDKs for Firebase products that you want to use
+// https://firebase.google.com/docs/web/setup#available-libraries
 
-        // Konfigurasi Firebase (Kosong jika tidak disediakan oleh lingkungan aplikasi Canvas/E-SIX)
-        // Jika Anda menjalankan ini secara mandiri, Anda perlu mengisi firebaseConfig Anda di sini:
-        // const firebaseConfig = {
-        //   apiKey: "YOUR_API_KEY",
-        //   authDomain: "YOUR_AUTH_DOMAIN",
-        //   projectId: "YOUR_PROJECT_ID",
-        //   storageBucket: "YOUR_STORAGE_BUCKET",
-        //   messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-        //   appId: "YOUR_APP_ID"
-        // };
-        // Untuk lingkungan E-SIX, ini biasanya disediakan secara global oleh `__firebase_config`.
-        const firebaseConfig = JSON.parse(typeof __firebase_config !== 'undefined' ? __firebase_config : '{}');
-        const appId = typeof __app_id !== 'undefined' ? __app_id : 'default-app-id'; // 'default-app-id' jika tidak didefinisikan
+// Your web app's Firebase configuration
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
+const firebaseConfig = {
+  apiKey: "AIzaSyB1WGkj4_xk-DkUyW35DQi_OG4jh8P7kkI",
+  authDomain: "e-sixvasco.firebaseapp.com",
+  projectId: "e-sixvasco",
+  storageBucket: "e-sixvasco.firebasestorage.app",
+  messagingSenderId: "948517017927",
+  appId: "1:948517017927:web:f208dd498c5f6bbc2e5462",
+  measurementId: "G-5Q4D36EYYV"
+};
 
-        // Inisialisasi Firebase
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-        const db = getFirestore(app);
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(app);
 
         const loginCodeInput = document.getElementById('loginCodeInput');
         const loginButton = document.getElementById('loginButton');
